# SofaCUDALinearSolver

./: .buildinfo  CMakeLists.txt  FinfCUDASolver.cmake  README.md  SofaCUDALinearSolverConfig.cmake.in  SofaCUDASolverConfig.cmake.in  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: classsofa_1_1component_1_1linearsolver_1_1direct_1_1CUDASparseCholeskySolver.doctree  define_CUDACholeksySparseSolver_8cpp_1a3decdc8b418bb7013cef2546ab2fdd10.doctree  define_utils_8h_1a0dc2509fe91ff83747bb2f336c2c0d44.doctree  define_utils_8h_1affad5b16e01b3da52fa1a44786b8bedb.doctree  dir_src.doctree  dir_src_SofaCUDALinearSolver.doctree  file_src_SofaCUDALinearSolver_CUDACholeksySparseSolver.cpp.doctree  file_src_SofaCUDALinearSolver_CUDACholeksySparseSolver.h.doctree  file_src_SofaCUDALinearSolver_CUDACholeksySparseSolver.inl.doctree  file_src_SofaCUDALinearSolver_initSofaCUDALinearSolver.cpp.doctree  file_src_SofaCUDALinearSolver_utils.h.doctree  function_initSofaCUDALinearSolver_8cpp_1a44ed889b5f8bb76b6bd8ac4f4b50f34c.doctree  function_initSofaCUDALinearSolver_8cpp_1a46fad1aeab8d4b22de640eb81251b2f9.doctree  function_initSofaCUDALinearSolver_8cpp_1a86935684c3859891350f7db369490d33.doctree  function_initSofaCUDALinearSolver_8cpp_1a89120c5d3a2d8abeb8a06bd97244b1bb.doctree  (+25 more)
_sources/: index.rst.txt
api/: classsofa_1_1component_1_1linearsolver_1_1direct_1_1CUDASparseCholeskySolver.html  define_CUDACholeksySparseSolver_8cpp_1a3decdc8b418bb7013cef2546ab2fdd10.html  define_utils_8h_1a0dc2509fe91ff83747bb2f336c2c0d44.html  define_utils_8h_1affad5b16e01b3da52fa1a44786b8bedb.html  dir_src.html  dir_src_SofaCUDALinearSolver.html  file_src_SofaCUDALinearSolver_CUDACholeksySparseSolver.cpp.html  file_src_SofaCUDALinearSolver_CUDACholeksySparseSolver.h.html  file_src_SofaCUDALinearSolver_CUDACholeksySparseSolver.inl.html  file_src_SofaCUDALinearSolver_initSofaCUDALinearSolver.cpp.html  file_src_SofaCUDALinearSolver_utils.h.html  function_initSofaCUDALinearSolver_8cpp_1a44ed889b5f8bb76b6bd8ac4f4b50f34c.html  function_initSofaCUDALinearSolver_8cpp_1a46fad1aeab8d4b22de640eb81251b2f9.html  function_initSofaCUDALinearSolver_8cpp_1a86935684c3859891350f7db369490d33.html  function_initSofaCUDALinearSolver_8cpp_1a89120c5d3a2d8abeb8a06bd97244b1bb.html  function_initSofaCUDALinearSolver_8cpp_1a925f86586ba8483514c39b8195865172.html  function_initSofaCUDALinearSolver_8cpp_1ab683be1172f7e066d5afa4dc629dfca8.html  function_initSofaCUDALinearSolver_8cpp_1ae97f7737e707fc56a505aad155cad50f.html  function_namespaceSofaCUDALinearSolver_1acbd2bb8247e3cf7bbfb9f7f9d9f31600.html  function_namespacesofa_1_1component_1_1linearsolver_1_1direct_1aac02b3f96d71cc4229b9ea1795d661bf.html  function_utils_8h_1a68f18130573d44970cc9c1869a606f59.html  function_utils_8h_1a9d5d37f41be38eabce6249406f92c147.html  library_root.html  namespace_SofaCUDALinearSolver.html  namespace_sofa.html  namespace_sofa__component.html  namespace_sofa__component__linearsolver.html  namespace_sofa__component__linearsolver__direct.html  namespace_sofa__linearalgebra.html  program_listing_file_src_SofaCUDALinearSolver_CUDACholeksySparseSolver.cpp.html  program_listing_file_src_SofaCUDALinearSolver_CUDACholeksySparseSolver.h.html  program_listing_file_src_SofaCUDALinearSolver_CUDACholeksySparseSolver.inl.html  program_listing_file_src_SofaCUDALinearSolver_initSofaCUDALinearSolver.cpp.html  program_listing_file_src_SofaCUDALinearSolver_utils.h.html  typedef_namespacesofa_1_1component_1_1linearsolver_1_1direct_1a595c95f8aa8bffa466673a4606eea1d2.html  unabridged_orphan.html  variable_initSofaCUDALinearSolver_8cpp_1abb52f3d45d9d14cb73d042af4f90a8f7.html  variable_namespacesofa_1_1component_1_1linearsolver_1_1direct_1a81ee0e6bd742b122690a7ac0352d234c.html  variable_namespacesofa_1_1component_1_1linearsolver_1_1direct_1aa94ed5cb6e5cf80c6b969af5ce8b596d.html  variable_namespacesofa_1_1component_1_1linearsolver_1_1direct_1ab118ef68311be2759a9ae2984f30ee47.html
docs/: Doxyfile  conf.py  requirements.txt
example/: FEMBAR-common.xml  FEMBAR_CUDASparseCholeskySolver.scn  FEMBAR_CUDASparseCholeskySolver_host.scn  FEMBAR_SolverGPU.scn  FEMBAR_fullCUDA.scn  MatrixAssembly_direct_blocs.scn  MatrixAssembly_direct_blocsGPU.scn  MultipleSolvers.scn
(+58 files in other folders)
